# nine-lives

./: .gitignore  README.md  package-lock.json  vercel.json
.github/workflows/: ci.yml
.kiro/specs/battle-info-tooltips/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/nine-lives-complete-implementation/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/security-audit-fixes/: .config.kiro  bugfix.md  design.md  tasks.md
backend/: .env.example  auth.py  main.py  pyproject.toml
backend/models/: schemas.py
backend/routers/: _helpers.py  battle.py  data.py  digitize.py
backend/services/: avatar_generator.py  battle_engine.py  card_generator.py  classify.py  combat.py  digitize.py  enemy_gen.py  extract_colors.py  generate_avatar.py  generate_card.py  storage.py  supabase_client.py  task_store.py
backend/tests/: _fakes.py  test_auth.py  test_battle_engine_round_progression.py  test_battle_router.py  test_classify.py  test_combat_properties.py  test_cross_user_access.py  test_data_router.py  test_digitize_pipeline.py  test_digitize_preservation.py  test_digitize_security.py  test_digitize_security_bugcondition.py  test_enemy_gen_properties.py  test_enemy_shield.py  test_extract_colors_properties.py  test_generate_avatar.py  test_generate_card.py  test_generate_card_fencing_properties.py  test_generate_card_security_bugcondition.py  test_image_validation_properties.py
docs/: aikido_security_recon_report_v1.md  architecture.md  battle-loop.md  idea.md  nine-lives-master.md  procedural-enemy-svgs.md  retro-avatar-prompt.md  retro-enemy-sprite-prompts.md
frontend/: components.json  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: authFetch.test.ts  authFetch.ts  battle.ts  data.ts  digitize.ts
frontend/src/assets/backgrounds/: README.md
frontend/src/components/: AbilityInfoPanel.test.tsx  AbilityInfoPanel.tsx  ActionButtons.test.tsx  ActionButtons.tsx  AppHeader.test.tsx  AppHeader.tsx  AudioControls.test.tsx  AudioControls.tsx  AuthGuard.tsx  BattleArena.tsx  CatCard.test.tsx  CatCard.tsx  ErrorBoundary.tsx  FarewellScreen.tsx  HealthBar.tsx  InfoIcon.test.tsx  InfoIcon.tsx  LivesDisplay.tsx  ManaBar.tsx  MemorialCatCard.tsx  StatInfoPanel.test.tsx  StatInfoPanel.tsx
frontend/src/components/ui/: textarea.tsx
frontend/src/components/ui/8bit/: button.test.tsx
frontend/src/data/: mockCat.ts
frontend/src/hooks/: audioAssets.ts  useAudio.test.tsx  useAudio.tsx  useGameState.ts  useInfoDisclosure.test.ts  useInfoDisclosure.ts  useIsTouchDevice.test.ts  useIsTouchDevice.ts  useMemorial.ts  useSupabase.ts
frontend/src/lib/: battleInfo.test.ts  battleInfo.ts
frontend/src/pages/: BattlePage.audio.test.tsx  BattlePage.test.tsx  BattlePage.tsx  DigitizePage.test.tsx  DigitizePage.tsx  HomePage.test.tsx  HomePage.tsx  LoginPage.tsx  MemorialPage.test.tsx  MemorialPage.tsx  OverworldPage.test.tsx  OverworldPage.tsx
frontend/src/types/: game.ts
frontend/src/utils/: combat.ts  enemyGen.ts  enemySprites.test.ts  enemySprites.ts  storage.test.ts  storage.ts
ml/: .env.example  pyproject.toml
ml/ml_research.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
ml/notebooks/: 01_breed_classification.ipynb  02_color_extraction.ipynb  03_card_generation.ipynb  04_avatar_generation.ipynb
ml/scripts/: classify_breed.py  extract_colors.py  generate_card.py
ml/segmentation/: remove_background.py
supabase/: IMPLEMENTATION_SUMMARY.md  README.md  RLS_POLICIES.md  STORAGE_BUCKET_DOCUMENTATION.md  TASK_1.3_COMPLETION_SUMMARY.md  TASK_COMPLETION_SUMMARY.md  VERIFICATION_CHECKLIST.md  config.toml  migration.sql  setup_storage.py  test_rls_policies.sql  test_schema.sql
supabase/migrations/: 20250701000000_initial_schema.sql  20250701000001_storage_setup.sql  20260702194201_fix_current_round_constraint.sql
