# NOTE: `requires-python` stays `>=3.11` so the current dev/test venv (Python 3.13)
# keeps working. The full ML digitization pipeline (Track B) is intended to run on
# Python >= 3.14 — the heavy ML packages in the optional `ml` extra below are only
# needed to run the real pipeline, not the (fully mocked) test suite.
[project]
name = "nine-lives-backend"
version = "0.1.0"
description = "FastAPI backend for Nine Lives"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "python-multipart>=0.0.20",
    "opencv-python>=4.10",
    "httpx>=0.28",
    "huggingface-hub>=0.30",
    "Pillow>=11",
    "python-dotenv>=1.1",
    "pydantic-settings>=2.7",
    "supabase>=2.10",
]

[project.optional-dependencies]
# Heavy ML dependencies for the digitization pipeline (Track B). These are NOT
# installed by default because they are large and can be difficult to build on the
# current test venv. Install them only when running the real pipeline with:
#
#     uv sync --extra ml
#
# The service modules (services/classify.py, services/extract_colors.py) import
# these lazily (inside functions) so importing the modules and running the mocked
# test suite never requires these packages to be present.
#
# First-use downloads: the transformers ViT weights `dima806/cat_breed_image_detection`
# and the YOLO segmentation weights `yolo11s-seg.pt` are fetched from their model hubs
# on first inference — they are not vendored in the repo.
ml = [
    "torch",
    "torchvision",
    "ultralytics",
    "transformers",
    "scikit-learn",
    "numpy",
    "google-genai",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "hypothesis>=6.100",
]

[tool.setuptools.packages.find]
include = ["models*", "routers*", "services*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
