# NOTE: `requires-python` stays `>=3.11` so the current dev/test venv (Python 3.13)
# keeps working. The full ML digitization pipeline (Track B) is intended to run on
# Python >= 3.14 — the heavy ML packages in the optional `ml` extra below are only
# needed to run the real pipeline, not the (fully mocked) test suite.
[project]
name = "nine-lives-backend"
version = "0.1.0"
description = "FastAPI backend for Nine Lives"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "python-multipart>=0.0.20",
    # opencv-python-headless (not opencv-python): the code only uses basic
    # array ops (cvtColor, drawContours) with no GUI/display needs, and the
    # full opencv-python bundles Qt/GUI libraries that roughly triple the
    # installed size for no benefit in a headless serverless function.
    "opencv-python-headless>=4.10",
    "httpx>=0.28",
    "huggingface-hub>=0.30",
    "Pillow>=11",
    "python-dotenv>=1.1",
    "pydantic-settings>=2.7",
    "supabase>=2.10",
    "torch",
    "torchvision",
    "ultralytics",
    "transformers",
    "scikit-learn",
    "numpy",
    "google-genai",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "hypothesis>=6.100",
    "ruff>=0.11",
]

[tool.setuptools.packages.find]
include = ["models*", "routers*", "services*"]
exclude = ["tests*"]

# Deploy targets (e.g. Vercel serverless functions) are CPU-only and have a
# hard bundle-size limit (500 MB). The default PyPI `torch`/`torchvision`
# wheels for Linux bundle full NVIDIA CUDA runtime packages (nvidia-cublas,
# nvidia-cudnn, cuda-toolkit, etc. — several GB combined) that are never used
# since inference here always runs on CPU. Point uv at the official CPU-only
# wheel index for these two packages so `uv.lock`/installs never pull the
# GPU-enabled build. See https://docs.astral.sh/uv/guides/integration/pytorch/
[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]
torchvision = [{ index = "pytorch-cpu" }]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
